--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "sha3": "^2.1.1",
     "ws": "7.2.0",
     "express": "4.17.1",
-    "readline-sync": "1.4.10",
-    "jotform-css.js": "1.0.1"
+    "readline-sync": "1.4.10"
   }
 }
