--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sha3": "^2.1.1",
     "ws": "7.2.0",
     "express": "4.17.1",
-    "readline-sync": "1.4.10"
+    "readline-sync": "1.4.10",
+    "fs-extra": "9.0.1"
   }
 }
